--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-util": "^2.2.*"
   },
   "dependencies": {
+    "bower": "^1.4.1",
     "express": "~4.11.*",
     "faye-websocket": "^0.9.*"
   },
