--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "MD5": "^1.2.*"
   },
   "scripts": {
-    "install": "bower install && gulp",
-    "start": "node bin/curvytron.js"
+    "install": "bower install",
+    "postinstall": "gulp",
   }
 }
