--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     }
   ],
   "devDependencies": {
-    "gulp": "^3.8.*",
+  },
+  "dependencies": {
+    "bower": "^1.4.1",
+    "express": "~4.11.*",
+    "faye-websocket": "^0.9.*",
+    "gulp": "^3.8.11",
     "gulp-concat": "^2.4.*",
     "gulp-header": "^1.0.*",
     "gulp-html-minifier": "^0.1.*",
@@ -40,12 +45,6 @@
     "gulp-sass": "^0.7.*",
     "gulp-uglify": "^0.3.*",
     "gulp-util": "^2.2.*"
-  },
-  "dependencies": {
-    "bower": "^1.4.1",
-    "express": "~4.11.*",
-    "faye-websocket": "^0.9.*",
-    "gulp": "^3.8.11"
   },
   "optionalDependencies": {
     "influx": "^3.2.*",
